--- a/pseudo_links.html
+++ b/pseudo_links.html
@@ -17,7 +17,7 @@
     </p>
     <p>
       Little Lemon is owned by two Italian brothers, Mario and Adrian, who moved
-      to the United States.
+      to the United States to pursue their shared dream of owning a restaurant. To craft the menu, Mario relies on family recipes and his experience as a chef in Italy. Adrian does all the marketing for the restaurant and led the effort to expand the menu beyond classic Italian to incorporate additional cuisines form the mediterranean region.
     </p>
   </body>
 </html>
